SSDM-12359: add JVM options '--add-opens' for tests